# jupyter-positron-verifier

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
jupyter_positron_verifier/: app.py  entitlement.py  signing.py  store.py
tests/: conftest.py  test_app.py  test_signing.py  test_store.py
