[project]
name = "jupyter-positron-verifier"
version = "0.1.0"
description = "JupyterHub service that mints short-lived Positron Server license tokens"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.29.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.0.0",
]

[project.scripts]
positron-verifier = "jupyter_positron_verifier.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
